<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar">

        <EditText
            android:id="@+id/number_edittext"
            android:layout_marginRight="16dp"
            style="@style/TextStyle"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_marginRight="16dp"
            style="@style/TextStyle"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"></EditText>

        <EditText
            android:id="@+id/search_edittext"
            android:layout_width="match_parent"
            style="@style/TextStyle"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_searchname"></EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="16dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_gravity="center"
                android:text="@string/add_channel" />

            <Button
                android:id="@+id/cancel_channel_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cancel_channel_add" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>